pom and xml for jenkins