@@ -18,6 +18,7 @@
             <id>Chrome</id>
             <properties>
                 <browser>chrome</browser>
+                <testNGPath>${basedir}/src/main/resources/testng/jenkins.xml</testNGPath>
                 <platform.env>pc</platform.env>
             </properties>
         </profile>
@@ -45,6 +46,34 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+
+            <!--Plugin for create XML-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <argLine>-XX:PermSize=256m -XX:MaxPermSize=1024m</argLine>
+                    <skip>false</skip>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${testNGPath}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
